✨ feat: Refactor avatar handling and update author information in cookbook content
This commit replaces the usage of the `Image` component with a new `AvatarImage` component for displaying author avatars in both the `CookbookPage` and `CookbookLayout`. Additionally, it updates author information in several cookbook markdown files, consolidating authors under the username "samarth" and enhancing the overall presentation of author details. These changes aim to improve the visual consistency and user experience across the cookbook section.

--- a/next-endpoint-ui/src/content/cookbook/frontend-coding-gpt-5.mdx
+++ b/next-endpoint-ui/src/content/cookbook/frontend-coding-gpt-5.mdx
@@ -6,11 +6,7 @@ tags:
   - RESPONSES
 authors:
   - name: "Lisa"
-    username: "lisa"
-  - name: "Tom"
-    username: "tom"
-  - name: "Chris"
-    username: "chris"
+    username: "samarth"
 ---
 
 # Frontend coding with GPT-5
