--- a/next-endpoint-ui/src/content/cookbook/gpt-5-prompt-migration.mdx
+++ b/next-endpoint-ui/src/content/cookbook/gpt-5-prompt-migration.mdx
@@ -5,8 +5,8 @@ tags:
   - REASONING
   - RESPONSES
 authors:
-  - name: "Anna"
-    username: "anna"
+  - name: "Samarth Madduru"
+    username: "samarth"
 ---
 
 # GPT-5 Prompt Migration and Improvement Using the New Features
@@ -54,20 +54,20 @@ GPT-5 automatically adjusts response complexity based on prompt difficulty.
 
 ### Before (GPT-4)
 
-\`\`\`
+```
 Write a function that calculates the sum of an array.
-\`\`\`
+```
 
 ### After (GPT-5)
 
-\`\`\`
+```
 Write a TypeScript function that:
 1. Takes an array of numbers as input
 2. Calculates the sum of all elements
 3. Returns the result
 4. Handles edge cases (empty array, null values)
 5. Includes JSDoc comments
-\`\`\`
+```
 
 ## Best Practices
 
