--- a/next-endpoint-ui/src/content/cookbook/gpt-5-prompting-guide.mdx
+++ b/next-endpoint-ui/src/content/cookbook/gpt-5-prompting-guide.mdx
@@ -5,12 +5,8 @@ tags:
   - REASONING
   - RESPONSES
 authors:
-  - name: "Sarah"
-    username: "sarah"
-  - name: "Mike"
-    username: "mike"
-  - name: "Alex"
-    username: "alex"
+  - name: "Samarth Madduru"
+    username: "samarth"
 ---
 
 # GPT-5 Prompting Guide
