✨ feat: Add starter template section to CookbookPage and enhance CookbookLayout
This commit introduces a new starter template section in the `CookbookPage`, featuring a detailed workflow template for automating daily revenue briefings. It includes a description, key features, and a checklist for deployment. Additionally, the `CookbookLayout` component is updated to display a ready-made WorqHat template section, providing users with a clear guide to launch workflows. These enhancements aim to improve user engagement and streamline the workflow setup process.

--- a/next-endpoint-ui/src/content/cookbook/gpt-5-1-prompting-guide.mdx
+++ b/next-endpoint-ui/src/content/cookbook/gpt-5-1-prompting-guide.mdx
@@ -6,7 +6,7 @@ tags:
   - AUTOMATION
   - ANALYTICS
 authors:
-  - name: "Samarth Madduru"
+  - name: "Sagnik Ghosh"
     username: "samarth"
 description: "Formal blueprint for a WorqHat workflow that automates the 9:00 AM revenue report from ingestion to executive briefing."
 ogImage: "https://assets.worqhat.com/cookbook/daily-revenue-briefing.png"
