✨ feat: Enhance Cookbook components with video support and background styling
This commit introduces a patterned background to the `CookbookPage` and updates the `CookbookLayout` to support video content, including optional video URL, poster, and description fields. Additionally, the `CookbookFrontmatter` type is updated to accommodate these new fields. The `daily-revenue-briefing-workflow.mdx` file is also modified to include video metadata, enhancing the overall user experience and engagement with the cookbook content.

--- a/next-endpoint-ui/src/content/cookbook/daily-revenue-briefing-workflow.mdx
+++ b/next-endpoint-ui/src/content/cookbook/daily-revenue-briefing-workflow.mdx
@@ -2,14 +2,17 @@
 title: "Daily Revenue Briefing Workflow"
 date: "Oct 26, 2025"
 tags:
-  - WORKFLOWS
-  - AUTOMATION
-  - ANALYTICS
+  - ECOMMERCE
+  - FINANCE
+  - OPERATIONS
 authors:
   - name: "Sagnik Ghosh"
     username: "samarth"
 description: "Formal blueprint for a WorqHat workflow that automates the 9:00 AM revenue report from ingestion to executive briefing."
 ogImage: "https://assets.worqhat.com/cookbook/daily-revenue-briefing.png"
+videoUrl: "https://www.youtube.com/watch?v=CEiMy-Kercw"
+videoPoster: "https://assets.worqhat.com/cookbook/daily-revenue-briefing.png"
+videoDescription: "Detailed walkthrough showing the trigger, query, Text Gen analysis, charting, and email nodes, along with the KPIs surfaced to leadership."
 ---
 
 # Overview
