✨ fix: Update author username and image links in daily revenue briefing workflow
This commit corrects the author username from "samarth" to "sagnik" and updates the Open Graph and video poster image links to new URLs, ensuring accurate representation and improved content quality in the `daily-revenue-briefing-workflow.mdx` file.

--- a/next-endpoint-ui/src/content/cookbook/daily-revenue-briefing-workflow.mdx
+++ b/next-endpoint-ui/src/content/cookbook/daily-revenue-briefing-workflow.mdx
@@ -7,11 +7,11 @@ tags:
   - OPERATIONS
 authors:
   - name: "Sagnik Ghosh"
-    username: "samarth"
+    username: "sagnik"
 description: "Formal blueprint for a WorqHat workflow that automates the 9:00 AM revenue report from ingestion to executive briefing."
-ogImage: "https://assets.worqhat.com/cookbook/daily-revenue-briefing.png"
+ogImage: "https://blog.worqhat.com/og/c6f9c89ea8b506661a0172d7f178fb91.png"
 videoUrl: "https://www.youtube.com/watch?v=CEiMy-Kercw"
-videoPoster: "https://assets.worqhat.com/cookbook/daily-revenue-briefing.png"
+videoPoster: "https://blog.worqhat.com/og/c6f9c89ea8b506661a0172d7f178fb91.png"
 videoDescription: "Detailed walkthrough showing the trigger, query, Text Gen analysis, charting, and email nodes, along with the KPIs surfaced to leadership."
 ---
 
