✨ update: Revise metadata and content structure in SmartMocks Mail Automation Workflow
This commit updates the date format, modifies tags for better categorization, and changes the Open Graph image link in the `smartmocks-mail-automation-workflow.mdx` file. Additionally, it cleans up the `docs.ts` file by re-exporting the `DocItem` type from `docs-client.ts` and removing redundant code, enhancing overall code clarity and maintainability.

--- a/next-endpoint-ui/src/content/cookbook/smartmocks-mail-automation-workflow.mdx
+++ b/next-endpoint-ui/src/content/cookbook/smartmocks-mail-automation-workflow.mdx
@@ -1,16 +1,14 @@
 ---
 title: "SmartMocks Mail Automation Workflow"
-date: "Nov 2025"
+date: "25th Nov 2025"
 tags:
-  - CAMPUS OPS
   - EDTECH
-  - OPERATIONS
-  - COMMUNICATIONS
+  - AUTOMATION
 authors:
   - name: "Ayush Kulshreshtha"
     username: "ayush"
 description: "A unified WorqHat workflow that automates all outbound emails for SmartMocks, handling sign ups, assignments, assignment edits, and interviews with deterministic routing and clean personalization."
-ogImage: "https://assets.worqhat.com/cookbook/smartmocks-mail-automation.png"
+ogImage: "https://blog.worqhat.com/og/d082b09640467a33fc503441273bc392.png"
 videoUrl: ""
 videoPoster: ""
 videoDescription: ""
