✨ chore: Add blank lines to multiple components and files for improved readability
This commit introduces blank lines at the end of several component files and the components.json file, enhancing code readability and maintaining consistent formatting across the project.

--- a/next-endpoint-ui/src/content/changelog/index.mdx
+++ b/next-endpoint-ui/src/content/changelog/index.mdx
@@ -14,7 +14,7 @@ export async function getStaticProps() {
 ---
 
 <Image
-  src="/content/workflows.png"
+  src="/content/nov-2025-update.png"
   alt="Workflow Runtime Hardening"
   width={500}
   height={300}
@@ -63,7 +63,7 @@ November focused on making big workflows dependable—even when data, audio, or 
 ---
 
 <Image
-  src="/content/ai-models.png"
+  src="/content/oct-2025-update.png"
   alt="Canvas and Billing Upgrades"
   width={500}
   height={300}
@@ -112,7 +112,7 @@ October was a marathon merge month. The new App Builder finally lives inside the
 ---
 
 <Image
-  src="/content/usage-logs.png"
+  src="/content/sept-2025-update.png"
   alt="Billing Dashboards and Neon Upgrades"
   width={500}
   height={300}
