✨ feat: Introduce getEnvOrDefault function for environment variable handling in database examples
This commit adds a new utility function, `getEnvOrDefault`, to both the delete and detect-anomalies documentation examples. This function simplifies the retrieval of environment variables by providing a default value when the specified variable is not set, enhancing code clarity and consistency across examples.

--- a/next-endpoint-ui/src/content/docs/database/delete.mdx
+++ b/next-endpoint-ui/src/content/docs/database/delete.mdx
@@ -113,6 +113,14 @@ This example shows how to delete records that match a single condition.
       "github.com/WorqHat/worqhat-go-sdk"
       "github.com/WorqHat/worqhat-go-sdk/option"
     )
+
+    func getEnvOrDefault(key, defaultValue string) string {
+      if value := os.Getenv(key); value != "" {
+        return value
+      }
+      return defaultValue
+    }
+    
     
     func main() {
       // Initialize the client with your API key
@@ -126,7 +134,7 @@ This example shows how to delete records that match a single condition.
         Where: map[string]interface{}{ // The condition to match records
           "status": "inactive",
         },
-        Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+        Environment: getEnvOrDefault("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
       })
       
       // Handle errors
