--- a/next-endpoint-ui/src/content/docs/database/detect-anomalies.mdx
+++ b/next-endpoint-ui/src/content/docs/database/detect-anomalies.mdx
@@ -38,10 +38,13 @@ You'll find this endpoint useful when you need to:
 
 This example shows how to detect anomalies in a transactions table.
 
-<Tabs>
-  <Tab title="Node.js" icon="js">
-    ```javascript
-    import Worqhat from 'worqhat';
+<CodeBlock
+  defaultValue="javascript"
+  data={[
+    {
+      language: "javascript",
+      filename: "detect-anomalies.js",
+      code: `import Worqhat from 'worqhat';
     
     // Initialize the client with your API key
     const client = new Worqhat({
@@ -60,8 +63,8 @@ This example shows how to detect anomalies in a transactions table.
         });
         
         // Handle the successful response
-        console.log(`Analyzed ${response.total_records} records`);
-        console.log(`Found ${response.anomaly_count} anomalies`);
+    console.log(\`Analyzed \${response.total_records} records\`);
+    console.log(\`Found \${response.anomaly_count} anomalies\`);
         console.log('Anomalies:', response.anomalies);
         return response;
       } catch (error) {
@@ -71,13 +74,12 @@ This example shows how to detect anomalies in a transactions table.
     }
     
     // Call the function
-    detectAnomalies();
-    ```
-  </Tab>
-  
-  <Tab title="Python" icon="python">
-    ```python
-    from worqhat import Worqhat
+detectAnomalies();`,
+    },
+    {
+      language: "python",
+      filename: "detect_anomalies.py",
+      code: `from worqhat import Worqhat
     import os
     
     # Initialize the client with your API key
@@ -101,13 +103,12 @@ This example shows how to detect anomalies in a transactions table.
         print(f"Anomalies: {response.anomalies}")
     except Exception as e:
         # Handle any errors
-        print(f"Error detecting anomalies: {str(e)}")
-    ```
-  </Tab>
-  
-  <Tab title="Go" icon="golang">
-    ```go
-    package main
+    print(f"Error detecting anomalies: {str(e)}")`,
+    },
+    {
+      language: "go",
+      filename: "detect_anomalies.go",
+      code: `package main
     
     import (
       "context"
@@ -150,13 +151,183 @@ This example shows how to detect anomalies in a transactions table.
       fmt.Printf("Analyzed %d records\n", response.TotalRecords)
       fmt.Printf("Found %d anomalies\n", response.AnomalyCount)
       fmt.Printf("Anomalies: %+v\n", response.Anomalies)
-    }
-    ```
-  </Tab>
-  
-  <Tab title="cURL" icon="terminal">
-    ```bash
+}`,
+    },
+    {
+      language: "bash",
+      filename: "detect-anomalies.sh",
+      code: `# Detect anomalies
+curl -X POST "https://api.worqhat.com/db/detect-anomalies" \
+  -H "Content-Type: application/json" \
+  -H "Authorization: Bearer YOUR_API_KEY" \
+  -d '{
+    "table": "transactions",
+    "k": 10,
+    "threshold": 0.8,
+    "limit": 50,
+    "environment": "production"
+  }'`,
+    },
+  ]}
+>
+  <CodeBlockHeader>
+    <CodeBlockFiles>
+      <CodeBlockFilename value="javascript">
+        detect-anomalies.js
+      </CodeBlockFilename>
+      <CodeBlockFilename value="python">
+        detect_anomalies.py
+      </CodeBlockFilename>
+      <CodeBlockFilename value="go">
+        detect_anomalies.go
+      </CodeBlockFilename>
+      <CodeBlockFilename value="bash">
+        detect-anomalies.sh
+      </CodeBlockFilename>
+    </CodeBlockFiles>
+
+    <CodeBlockSelect>
+      <CodeBlockSelectTrigger>
+        <CodeBlockSelectValue placeholder="Select language" />
+      </CodeBlockSelectTrigger>
+      <CodeBlockSelectContent>
+        <CodeBlockSelectItem value="javascript">
+          detect-anomalies.js
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="python">
+          detect_anomalies.py
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="go">
+          detect_anomalies.go
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="bash">
+          detect-anomalies.sh
+        </CodeBlockSelectItem>
+      </CodeBlockSelectContent>
+    </CodeBlockSelect>
+
+    <CodeBlockCopyButton />
+  </CodeBlockHeader>
+
+  <CodeBlockBody>
+    <CodeBlockItem value="javascript">
+      <CodeBlockContent language="javascript">
+        {`import Worqhat from 'worqhat';
+
+// Initialize the client with your API key
+const client = new Worqhat({
+  apiKey: process.env.WORQHAT_API_KEY, // Always use environment variables for API keys
+});
+
+async function detectAnomalies() {
+  try {
+    // Call the detectAnomalies method
+    const response = await client.db.detectAnomalies({
+      table: "transactions",
+      k: 10,
+      threshold: 0.8,
+      limit: 50,
+      environment: process.env.WORQHAT_ENVIRONMENT || 'production' // Defaults to production
+    });
+    
+    // Handle the successful response
+    console.log(\`Analyzed \${response.total_records} records\`);
+    console.log(\`Found \${response.anomaly_count} anomalies\`);
+    console.log('Anomalies:', response.anomalies);
+    return response;
+  } catch (error) {
+    // Handle any errors
+    console.error('Error detecting anomalies:', error.message);
+  }
+}
+
+// Call the function
+detectAnomalies();`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="python">
+      <CodeBlockContent language="python">
+        {`from worqhat import Worqhat
+import os
+
+# Initialize the client with your API key
+client = Worqhat(
+    api_key=os.environ.get("WORQHAT_API_KEY"),  # Using environment variables for security
+)
+
     # Detect anomalies
+try:
+    response = client.db.detect_anomalies(
+        table="transactions",
+        k=10,
+        threshold=0.8,
+        limit=50,
+        environment=os.environ.get("WORQHAT_ENVIRONMENT", "production")  # Defaults to production
+    )
+    
+    # Handle the successful response
+    print(f"Analyzed {response.total_records} records")
+    print(f"Found {response.anomaly_count} anomalies")
+    print(f"Anomalies: {response.anomalies}")
+except Exception as e:
+    # Handle any errors
+    print(f"Error detecting anomalies: {str(e)}")`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="go">
+      <CodeBlockContent language="go">
+        {`package main
+
+import (
+  "context"
+  "fmt"
+  "os"
+
+  "github.com/WorqHat/worqhat-go-sdk"
+  "github.com/WorqHat/worqhat-go-sdk/option"
+)
+
+func getEnvOrDefault(key, defaultValue string) string {
+  if value := os.Getenv(key); value != "" {
+    return value
+  }
+  return defaultValue
+}
+
+func main() {
+  // Initialize the client with your API key
+  client := worqhat.NewClient(
+    option.WithAPIKey(os.Getenv("WORQHAT_API_KEY")),  // Using environment variables
+  )
+  
+  // Detect anomalies
+  response, err := client.DB.DetectAnomalies(context.TODO(), worqhat.DBDetectAnomaliesParams{
+    Table: "transactions",
+    K: 10,
+    Threshold: 0.8,
+    Limit: 50,
+    Environment: getEnvOrDefault("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+  })
+  
+  // Handle errors
+  if err != nil {
+    fmt.Printf("Error detecting anomalies: %s\n", err.Error())
+    return
+  }
+  
+  // Handle the successful response
+  fmt.Printf("Analyzed %d records\n", response.TotalRecords)
+  fmt.Printf("Found %d anomalies\n", response.AnomalyCount)
+  fmt.Printf("Anomalies: %+v\n", response.Anomalies)
+}`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="bash">
+      <CodeBlockContent language="bash">
+        {`# Detect anomalies
     curl -X POST "https://api.worqhat.com/db/detect-anomalies" \
       -H "Content-Type: application/json" \
       -H "Authorization: Bearer YOUR_API_KEY" \
@@ -166,19 +337,23 @@ This example shows how to detect anomalies in a transactions table.
         "threshold": 0.8,
         "limit": 50,
         "environment": "production"
-      }'
-    ```
-  </Tab>
-</Tabs>
+  }'`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+  </CodeBlockBody>
+</CodeBlock>
 
 ### Example 2: Fraud Detection with Custom Parameters
 
 This example shows how to tune parameters for fraud detection in financial transactions.
 
-<Tabs>
-  <Tab title="Node.js" icon="js">
-    ```javascript
-    import Worqhat from 'worqhat';
+<CodeBlock
+  defaultValue="javascript"
+  data={[
+    {
+      language: "javascript",
+      filename: "detect-fraud.js",
+      code: `import Worqhat from 'worqhat';
     
     // Initialize the client with your API key
     const client = new Worqhat({
@@ -197,17 +372,17 @@ This example shows how to tune parameters for fraud detection in financial trans
         });
         
         // Handle the successful response
-        console.log(`Fraud detection analysis complete`);
-        console.log(`Total transactions analyzed: ${response.total_records}`);
-        console.log(`Potential fraud cases: ${response.anomaly_count}`);
+    console.log(\`Fraud detection analysis complete\`);
+    console.log(\`Total transactions analyzed: \${response.total_records}\`);
+    console.log(\`Potential fraud cases: \${response.anomaly_count}\`);
         
         // Process each anomaly
         response.anomalies.forEach((anomaly, index) => {
-          console.log(`\nAnomaly ${index + 1}:`);
-          console.log(`- Transaction ID: ${anomaly.record.transaction_id}`);
-          console.log(`- Amount: $${anomaly.record.amount}`);
-          console.log(`- Anomaly Score: ${anomaly.anomaly_score}`);
-          console.log(`- Average Distance: ${anomaly.avg_distance}`);
+      console.log(\`\\nAnomaly \${index + 1}:\`);
+      console.log(\`- Transaction ID: \${anomaly.record.transaction_id}\`);
+      console.log(\`- Amount: $\${anomaly.record.amount}\`);
+      console.log(\`- Anomaly Score: \${anomaly.anomaly_score}\`);
+      console.log(\`- Average Distance: \${anomaly.avg_distance}\`);
         });
         return response;
       } catch (error) {
@@ -215,13 +390,12 @@ This example shows how to tune parameters for fraud detection in financial trans
       }
     }
     
-    detectFraud();
-    ```
-  </Tab>
-  
-  <Tab title="Python" icon="python">
-    ```python
-    from worqhat import Worqhat
+detectFraud();`,
+    },
+    {
+      language: "python",
+      filename: "detect_fraud.py",
+      code: `from worqhat import Worqhat
     import os
     
     # Initialize the client with your API key
@@ -246,19 +420,18 @@ This example shows how to tune parameters for fraud detection in financial trans
         
         # Process each anomaly
         for i, anomaly in enumerate(response.anomalies):
-            print(f"\nAnomaly {i + 1}:")
+        print(f"\\nAnomaly {i + 1}:")
             print(f"- Transaction ID: {anomaly.record.transaction_id}")
-            print(f"- Amount: ${anomaly.record.amount}")
+        print(f"- Amount: {anomaly.record.amount}")
             print(f"- Anomaly Score: {anomaly.anomaly_score}")
             print(f"- Average Distance: {anomaly.avg_distance}")
     except Exception as e:
-        print(f"Error detecting fraud: {str(e)}")
-    ```
-  </Tab>
-  
-  <Tab title="Go" icon="golang">
-    ```go
-    package main
+    print(f"Error detecting fraud: {str(e)}")`,
+    },
+    {
+      language: "go",
+      filename: "detect_fraud.go",
+      code: `package main
     
     import (
       "context"
@@ -297,19 +470,205 @@ This example shows how to tune parameters for fraud detection in financial trans
       
       // Process each anomaly
       for i, anomaly := range response.Anomalies {
-        fmt.Printf("\nAnomaly %d:\n", i+1)
-        fmt.Printf("- Transaction ID: %s\n", anomaly.Record["transaction_id"])
-        fmt.Printf("- Amount: $%.2f\n", anomaly.Record["amount"])
-        fmt.Printf("- Anomaly Score: %.3f\n", anomaly.AnomalyScore)
-        fmt.Printf("- Average Distance: %.3f\n", anomaly.AvgDistance)
+    fmt.Printf("\\nAnomaly %d:\\n", i+1)
+    fmt.Printf("- Transaction ID: %s\\n", anomaly.Record["transaction_id"])
+    fmt.Printf("- Amount: $%.2f\\n", anomaly.Record["amount"])
+    fmt.Printf("- Anomaly Score: %.3f\\n", anomaly.AnomalyScore)
+    fmt.Printf("- Average Distance: %.3f\\n", anomaly.AvgDistance)
       }
-    }
-    ```
-  </Tab>
-  
-  <Tab title="cURL" icon="terminal">
-    ```bash
+}`,
+    },
+    {
+      language: "bash",
+      filename: "detect-fraud.sh",
+      code: `# Detect fraud with stricter parameters
+curl -X POST "https://api.worqhat.com/db/detect-anomalies" \
+  -H "Content-Type: application/json" \
+  -H "Authorization: Bearer YOUR_API_KEY" \
+  -d '{
+    "table": "financial_transactions",
+    "k": 15,
+    "threshold": 0.9,
+    "limit": 100,
+    "environment": "production"
+  }'`,
+    },
+  ]}
+>
+  <CodeBlockHeader>
+    <CodeBlockFiles>
+      <CodeBlockFilename value="javascript">
+        detect-fraud.js
+      </CodeBlockFilename>
+      <CodeBlockFilename value="python">
+        detect_fraud.py
+      </CodeBlockFilename>
+      <CodeBlockFilename value="go">
+        detect_fraud.go
+      </CodeBlockFilename>
+      <CodeBlockFilename value="bash">
+        detect-fraud.sh
+      </CodeBlockFilename>
+    </CodeBlockFiles>
+
+    <CodeBlockSelect>
+      <CodeBlockSelectTrigger>
+        <CodeBlockSelectValue placeholder="Select language" />
+      </CodeBlockSelectTrigger>
+      <CodeBlockSelectContent>
+        <CodeBlockSelectItem value="javascript">
+          detect-fraud.js
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="python">
+          detect_fraud.py
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="go">
+          detect_fraud.go
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="bash">
+          detect-fraud.sh
+        </CodeBlockSelectItem>
+      </CodeBlockSelectContent>
+    </CodeBlockSelect>
+
+    <CodeBlockCopyButton />
+  </CodeBlockHeader>
+
+  <CodeBlockBody>
+    <CodeBlockItem value="javascript">
+      <CodeBlockContent language="javascript">
+        {`import Worqhat from 'worqhat';
+
+// Initialize the client with your API key
+const client = new Worqhat({
+  apiKey: process.env.WORQHAT_API_KEY,
+});
+
+async function detectFraud() {
+  try {
+    // Detect fraud with stricter parameters
+    const response = await client.db.detectAnomalies({
+      table: "financial_transactions",
+      k: 15,              // More neighbors for better accuracy
+      threshold: 0.9,     // Higher threshold for stricter detection
+      limit: 100,         // More results to investigate
+      environment: process.env.WORQHAT_ENVIRONMENT || 'production' // Defaults to production
+    });
+    
+    // Handle the successful response
+    console.log(\`Fraud detection analysis complete\`);
+    console.log(\`Total transactions analyzed: \${response.total_records}\`);
+    console.log(\`Potential fraud cases: \${response.anomaly_count}\`);
+    
+    // Process each anomaly
+    response.anomalies.forEach((anomaly, index) => {
+      console.log(\`\\nAnomaly \${index + 1}:\`);
+      console.log(\`- Transaction ID: \${anomaly.record.transaction_id}\`);
+      console.log(\`- Amount: $\${anomaly.record.amount}\`);
+      console.log(\`- Anomaly Score: \${anomaly.anomaly_score}\`);
+      console.log(\`- Average Distance: \${anomaly.avg_distance}\`);
+    });
+    return response;
+  } catch (error) {
+    console.error('Error detecting fraud:', error.message);
+  }
+}
+
+detectFraud();`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="python">
+      <CodeBlockContent language="python">
+        {`from worqhat import Worqhat
+import os
+
+# Initialize the client with your API key
+client = Worqhat(
+    api_key=os.environ.get("WORQHAT_API_KEY"),
+)
+
     # Detect fraud with stricter parameters
+try:
+    response = client.db.detect_anomalies(
+        table="financial_transactions",
+        k=15,              # More neighbors for better accuracy
+        threshold=0.9,    # Higher threshold for stricter detection
+        limit=100,        # More results to investigate
+        environment=os.environ.get("WORQHAT_ENVIRONMENT", "production")  # Defaults to production
+    )
+    
+    # Handle the successful response
+    print("Fraud detection analysis complete")
+    print(f"Total transactions analyzed: {response.total_records}")
+    print(f"Potential fraud cases: {response.anomaly_count}")
+    
+    # Process each anomaly
+    for i, anomaly in enumerate(response.anomalies):
+        print(f"\\nAnomaly {i + 1}:")
+        print(f"- Transaction ID: {anomaly.record.transaction_id}")
+        print(f"- Amount: {anomaly.record.amount}")
+        print(f"- Anomaly Score: {anomaly.anomaly_score}")
+        print(f"- Average Distance: {anomaly.avg_distance}")
+except Exception as e:
+    print(f"Error detecting fraud: {str(e)}")`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="go">
+      <CodeBlockContent language="go">
+        {`package main
+
+import (
+  "context"
+  "fmt"
+  "os"
+
+  "github.com/WorqHat/worqhat-go-sdk"
+  "github.com/WorqHat/worqhat-go-sdk/option"
+)
+
+func main() {
+  // Initialize the client with your API key
+  client := worqhat.NewClient(
+    option.WithAPIKey(os.Getenv("WORQHAT_API_KEY")),
+  )
+  
+  // Detect fraud with stricter parameters
+  response, err := client.DB.DetectAnomalies(context.TODO(), worqhat.DBDetectAnomaliesParams{
+    Table: "financial_transactions",
+    K: 15,              // More neighbors for better accuracy
+    Threshold: 0.9,     // Higher threshold for stricter detection
+    Limit: 100,         // More results to investigate
+    Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+  })
+  
+  // Handle errors
+  if err != nil {
+    fmt.Printf("Error detecting fraud: %s\n", err.Error())
+    return
+  }
+  
+  // Handle the successful response
+  fmt.Println("Fraud detection analysis complete")
+  fmt.Printf("Total transactions analyzed: %d\n", response.TotalRecords)
+  fmt.Printf("Potential fraud cases: %d\n", response.AnomalyCount)
+  
+  // Process each anomaly
+  for i, anomaly := range response.Anomalies {
+    fmt.Printf("\\nAnomaly %d:\\n", i+1)
+    fmt.Printf("- Transaction ID: %s\\n", anomaly.Record["transaction_id"])
+    fmt.Printf("- Amount: $%.2f\\n", anomaly.Record["amount"])
+    fmt.Printf("- Anomaly Score: %.3f\\n", anomaly.AnomalyScore)
+    fmt.Printf("- Average Distance: %.3f\\n", anomaly.AvgDistance)
+  }
+}`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="bash">
+      <CodeBlockContent language="bash">
+        {`# Detect fraud with stricter parameters
     curl -X POST "https://api.worqhat.com/db/detect-anomalies" \
       -H "Content-Type: application/json" \
       -H "Authorization: Bearer YOUR_API_KEY" \
@@ -319,19 +678,23 @@ This example shows how to tune parameters for fraud detection in financial trans
         "threshold": 0.9,
         "limit": 100,
         "environment": "production"
-      }'
-    ```
-  </Tab>
-</Tabs>
+  }'`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+  </CodeBlockBody>
+</CodeBlock>
 
 ### Example 3: Data Quality Check
 
 This example shows how to use anomaly detection for data quality assurance.
 
-<Tabs>
-  <Tab title="Node.js" icon="js">
-    ```javascript
-    import Worqhat from 'worqhat';
+<CodeBlock
+  defaultValue="javascript"
+  data={[
+    {
+      language: "javascript",
+      filename: "data-quality.js",
+      code: `import Worqhat from 'worqhat';
     
     // Initialize the client with your API key
     const client = new Worqhat({
@@ -350,17 +713,17 @@ This example shows how to use anomaly detection for data quality assurance.
         });
         
         // Handle the successful response
-        console.log(`Data quality check complete`);
-        console.log(`Total profiles analyzed: ${response.total_records}`);
-        console.log(`Potential data quality issues: ${response.anomaly_count}`);
+    console.log(\`Data quality check complete\`);
+    console.log(\`Total profiles analyzed: \${response.total_records}\`);
+    console.log(\`Potential data quality issues: \${response.anomaly_count}\`);
         
         // Analyze anomalies for data quality issues
         response.anomalies.forEach((anomaly, index) => {
-          console.log(`\nData Quality Issue ${index + 1}:`);
-          console.log(`- User ID: ${anomaly.record.user_id}`);
-          console.log(`- Profile: ${JSON.stringify(anomaly.record, null, 2)}`);
-          console.log(`- Anomaly Score: ${anomaly.anomaly_score}`);
-          console.log(`- Nearest Neighbors: ${anomaly.nearest_neighbors.length}`);
+      console.log(\`\\nData Quality Issue \${index + 1}:\`);
+      console.log(\`- User ID: \${anomaly.record.user_id}\`);
+      console.log(\`- Profile: \${JSON.stringify(anomaly.record, null, 2)}\`);
+      console.log(\`- Anomaly Score: \${anomaly.anomaly_score}\`);
+      console.log(\`- Nearest Neighbors: \${anomaly.nearest_neighbors.length}\`);
         });
         return response;
       } catch (error) {
@@ -368,13 +731,12 @@ This example shows how to use anomaly detection for data quality assurance.
       }
     }
     
-    checkDataQuality();
-    ```
-  </Tab>
-  
-  <Tab title="Python" icon="python">
-    ```python
-    from worqhat import Worqhat
+checkDataQuality();`,
+    },
+    {
+      language: "python",
+      filename: "data_quality.py",
+      code: `from worqhat import Worqhat
     import os
     import json
     
@@ -400,19 +762,18 @@ This example shows how to use anomaly detection for data quality assurance.
         
         # Analyze anomalies for data quality issues
         for i, anomaly in enumerate(response.anomalies):
-            print(f"\nData Quality Issue {i + 1}:")
+        print(f"\\nData Quality Issue {i + 1}:")
             print(f"- User ID: {anomaly.record.user_id}")
             print(f"- Profile: {json.dumps(anomaly.record, indent=2)}")
             print(f"- Anomaly Score: {anomaly.anomaly_score}")
             print(f"- Nearest Neighbors: {len(anomaly.nearest_neighbors)}")
     except Exception as e:
-        print(f"Error checking data quality: {str(e)}")
-    ```
-  </Tab>
-  
-  <Tab title="Go" icon="golang">
-    ```go
-    package main
+    print(f"Error checking data quality: {str(e)}")`,
+    },
+    {
+      language: "go",
+      filename: "data_quality.go",
+      code: `package main
     
     import (
       "context"
@@ -452,21 +813,211 @@ This example shows how to use anomaly detection for data quality assurance.
       
       // Analyze anomalies for data quality issues
       for i, anomaly := range response.Anomalies {
-        fmt.Printf("\nData Quality Issue %d:\n", i+1)
-        fmt.Printf("- User ID: %s\n", anomaly.Record["user_id"])
+    fmt.Printf("\\nData Quality Issue %d:\\n", i+1)
+    fmt.Printf("- User ID: %s\\n", anomaly.Record["user_id"])
         
         profileJSON, _ := json.MarshalIndent(anomaly.Record, "", "  ")
-        fmt.Printf("- Profile: %s\n", profileJSON)
-        fmt.Printf("- Anomaly Score: %.3f\n", anomaly.AnomalyScore)
-        fmt.Printf("- Nearest Neighbors: %d\n", len(anomaly.NearestNeighbors))
+    fmt.Printf("- Profile: %s\\n", profileJSON)
+    fmt.Printf("- Anomaly Score: %.3f\\n", anomaly.AnomalyScore)
+    fmt.Printf("- Nearest Neighbors: %d\\n", len(anomaly.NearestNeighbors))
       }
-    }
-    ```
-  </Tab>
-  
-  <Tab title="cURL" icon="terminal">
-    ```bash
+}`,
+    },
+    {
+      language: "bash",
+      filename: "data-quality.sh",
+      code: `# Check data quality with moderate parameters
+curl -X POST "https://api.worqhat.com/db/detect-anomalies" \
+  -H "Content-Type: application/json" \
+  -H "Authorization: Bearer YOUR_API_KEY" \
+  -d '{
+    "table": "user_profiles",
+    "k": 8,
+    "threshold": 0.7,
+    "limit": 30,
+    "environment": "production"
+  }'`,
+    },
+  ]}
+>
+  <CodeBlockHeader>
+    <CodeBlockFiles>
+      <CodeBlockFilename value="javascript">
+        data-quality.js
+      </CodeBlockFilename>
+      <CodeBlockFilename value="python">
+        data_quality.py
+      </CodeBlockFilename>
+      <CodeBlockFilename value="go">
+        data_quality.go
+      </CodeBlockFilename>
+      <CodeBlockFilename value="bash">
+        data-quality.sh
+      </CodeBlockFilename>
+    </CodeBlockFiles>
+
+    <CodeBlockSelect>
+      <CodeBlockSelectTrigger>
+        <CodeBlockSelectValue placeholder="Select language" />
+      </CodeBlockSelectTrigger>
+      <CodeBlockSelectContent>
+        <CodeBlockSelectItem value="javascript">
+          data-quality.js
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="python">
+          data_quality.py
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="go">
+          data_quality.go
+        </CodeBlockSelectItem>
+        <CodeBlockSelectItem value="bash">
+          data-quality.sh
+        </CodeBlockSelectItem>
+      </CodeBlockSelectContent>
+    </CodeBlockSelect>
+
+    <CodeBlockCopyButton />
+  </CodeBlockHeader>
+
+  <CodeBlockBody>
+    <CodeBlockItem value="javascript">
+      <CodeBlockContent language="javascript">
+        {`import Worqhat from 'worqhat';
+
+// Initialize the client with your API key
+const client = new Worqhat({
+  apiKey: process.env.WORQHAT_API_KEY,
+});
+
+async function checkDataQuality() {
+  try {
+    // Check data quality with moderate parameters
+    const response = await client.db.detectAnomalies({
+      table: "user_profiles",
+      k: 8,               // Moderate number of neighbors
+      threshold: 0.7,      // Moderate threshold for data quality
+      limit: 30,           // Reasonable number of results
+      environment: process.env.WORQHAT_ENVIRONMENT || 'production' // Defaults to production
+    });
+    
+    // Handle the successful response
+    console.log(\`Data quality check complete\`);
+    console.log(\`Total profiles analyzed: \${response.total_records}\`);
+    console.log(\`Potential data quality issues: \${response.anomaly_count}\`);
+    
+    // Analyze anomalies for data quality issues
+    response.anomalies.forEach((anomaly, index) => {
+      console.log(\`\\nData Quality Issue \${index + 1}:\`);
+      console.log(\`- User ID: \${anomaly.record.user_id}\`);
+      console.log(\`- Profile: \${JSON.stringify(anomaly.record, null, 2)}\`);
+      console.log(\`- Anomaly Score: \${anomaly.anomaly_score}\`);
+      console.log(\`- Nearest Neighbors: \${anomaly.nearest_neighbors.length}\`);
+    });
+    return response;
+  } catch (error) {
+    console.error('Error checking data quality:', error.message);
+  }
+}
+
+checkDataQuality();`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="python">
+      <CodeBlockContent language="python">
+        {`from worqhat import Worqhat
+import os
+import json
+
+# Initialize the client with your API key
+client = Worqhat(
+    api_key=os.environ.get("WORQHAT_API_KEY"),
+)
+
     # Check data quality with moderate parameters
+try:
+    response = client.db.detect_anomalies(
+        table="user_profiles",
+        k=8,               # Moderate number of neighbors
+        threshold=0.7,     # Moderate threshold for data quality
+        limit=30,          # Reasonable number of results
+        environment=os.environ.get("WORQHAT_ENVIRONMENT", "production")  # Defaults to production
+    )
+    
+    # Handle the successful response
+    print("Data quality check complete")
+    print(f"Total profiles analyzed: {response.total_records}")
+    print(f"Potential data quality issues: {response.anomaly_count}")
+    
+    # Analyze anomalies for data quality issues
+    for i, anomaly in enumerate(response.anomalies):
+        print(f"\\nData Quality Issue {i + 1}:")
+        print(f"- User ID: {anomaly.record.user_id}")
+        print(f"- Profile: {json.dumps(anomaly.record, indent=2)}")
+        print(f"- Anomaly Score: {anomaly.anomaly_score}")
+        print(f"- Nearest Neighbors: {len(anomaly.nearest_neighbors)}")
+except Exception as e:
+    print(f"Error checking data quality: {str(e)}")`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="go">
+      <CodeBlockContent language="go">
+        {`package main
+
+import (
+  "context"
+  "encoding/json"
+  "fmt"
+  "os"
+
+  "github.com/WorqHat/worqhat-go-sdk"
+  "github.com/WorqHat/worqhat-go-sdk/option"
+)
+
+func main() {
+  // Initialize the client with your API key
+  client := worqhat.NewClient(
+    option.WithAPIKey(os.Getenv("WORQHAT_API_KEY")),
+  )
+  
+  // Check data quality with moderate parameters
+  response, err := client.DB.DetectAnomalies(context.TODO(), worqhat.DBDetectAnomaliesParams{
+    Table: "user_profiles",
+    K: 8,               // Moderate number of neighbors
+    Threshold: 0.7,     // Moderate threshold for data quality
+    Limit: 30,          // Reasonable number of results
+    Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+  })
+  
+  // Handle errors
+  if err != nil {
+    fmt.Printf("Error checking data quality: %s\n", err.Error())
+    return
+  }
+  
+  // Handle the successful response
+  fmt.Println("Data quality check complete")
+  fmt.Printf("Total profiles analyzed: %d\n", response.TotalRecords)
+  fmt.Printf("Potential data quality issues: %d\n", response.AnomalyCount)
+  
+  // Analyze anomalies for data quality issues
+  for i, anomaly := range response.Anomalies {
+    fmt.Printf("\\nData Quality Issue %d:\\n", i+1)
+    fmt.Printf("- User ID: %s\\n", anomaly.Record["user_id"])
+    
+    profileJSON, _ := json.MarshalIndent(anomaly.Record, "", "  ")
+    fmt.Printf("- Profile: %s\\n", profileJSON)
+    fmt.Printf("- Anomaly Score: %.3f\\n", anomaly.AnomalyScore)
+    fmt.Printf("- Nearest Neighbors: %d\\n", len(anomaly.NearestNeighbors))
+  }
+}`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+
+    <CodeBlockItem value="bash">
+      <CodeBlockContent language="bash">
+        {`# Check data quality with moderate parameters
     curl -X POST "https://api.worqhat.com/db/detect-anomalies" \
       -H "Content-Type: application/json" \
       -H "Authorization: Bearer YOUR_API_KEY" \
@@ -476,10 +1027,11 @@ This example shows how to use anomaly detection for data quality assurance.
         "threshold": 0.7,
         "limit": 30,
         "environment": "production"
-      }'
-    ```
-  </Tab>
-</Tabs>
+  }'`}
+      </CodeBlockContent>
+    </CodeBlockItem>
+  </CodeBlockBody>
+</CodeBlock>
 
 ## Request Body Explained
 
