✨ fix: Standardize environment variable handling in Go examples and correct code inconsistencies across documentation
This commit updates Go code examples across database, storage, and workflow documentation to use a consistent pattern for retrieving environment variables with default values. It replaces the non-existent `os.Getenv("VAR", "default")` syntax with proper Go code that checks for empty values. Additionally, it fixes several code errors including incorrect f-string syntax in Go, missing

--- a/next-endpoint-ui/src/content/docs/database/cluster.mdx
+++ b/next-endpoint-ui/src/content/docs/database/cluster.mdx
@@ -138,10 +138,14 @@ This example shows how to automatically cluster products with optimal cluster de
       )
       
       // Cluster products
+      env := os.Getenv("WORQHAT_ENVIRONMENT")
+      if env == "" {
+        env = "production"
+      }
       response, err := client.DB.Cluster(context.TODO(), worqhat.DBClusterParams{
         Table: "products",
         GenerateLabels: true,
-        Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+        Environment: env, // Defaults to production
       })
       
       // Handle errors
