--- a/next-endpoint-ui/src/content/docs/database/detect-anomalies.mdx
+++ b/next-endpoint-ui/src/content/docs/database/detect-anomalies.mdx
@@ -792,12 +792,16 @@ checkDataQuality();`,
       )
       
       // Check data quality with moderate parameters
+      env := os.Getenv("WORQHAT_ENVIRONMENT")
+      if env == "" {
+        env = "production"
+      }
       response, err := client.DB.DetectAnomalies(context.TODO(), worqhat.DBDetectAnomaliesParams{
         Table: "user_profiles",
         K: 8,               // Moderate number of neighbors
         Threshold: 0.7,     // Moderate threshold for data quality
         Limit: 30,          // Reasonable number of results
-        Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+        Environment: env, // Defaults to production
       })
       
       // Handle errors
