--- a/next-endpoint-ui/src/content/docs/policies/bugs-disclosure-policy.mdx
+++ b/next-endpoint-ui/src/content/docs/policies/bugs-disclosure-policy.mdx
@@ -21,7 +21,7 @@ To encourage vulnerability research and to avoid any confusion between good-fait
 ## Getting Started with Bugs Security Disclosure
  <Card
     title="Reach Out to team"
-    href="support@worqhat.com"
+    href="mailto:support@worqhat.com"
   >
     Send an email with a description of the vulnerability and steps to reproduce.
   </Card>
@@ -41,7 +41,7 @@ EC2 instances, Redis and Google Cloud Databases).
 
 <Card
     title="Reach Out to team"
-    href="support@worqhat.com"
+    href="mailto:support@worqhat.com"
   >
     Send an email with a description of the vulnerability and steps to reproduce.
   </Card>
@@ -50,7 +50,7 @@ EC2 instances, Redis and Google Cloud Databases).
 * Attacks designed or likely to destroy, corrupt, make unreadable data or information that does not belong to you.
 * Attacks designed or likely to validate stolen credentials, credential reuse, account takeover, hijacking, or other credential-based techniques.
 * Intentionally accessing data or information that does not belong to you beyond the minimum viable access necessary to demonstrate the vulnerability.
-* Performing physical, social engineering, phishing, or electronic access against OpenAI personnel, offices, wireless networks, or property.
+* Performing physical, social engineering, phishing, or electronic access against WorqHat personnel, offices, wireless networks, or property.
 * Attacks performed on any system not explicitly mentioned above as in-scope.
 * Attacks related to email servers, email protocols, email security (e.g., SPF, DMARC, DKIM) or email spam.
 * Reports of insecure SSL/TLS ciphers, unless accompanied by a working proof-of-concept.
