--- a/next-endpoint-ui/src/content/docs/database/semantic-search.mdx
+++ b/next-endpoint-ui/src/content/docs/database/semantic-search.mdx
@@ -123,12 +123,16 @@ This example shows how to perform a simple semantic search on a single table.
       )
       
       // Perform semantic search
+      env := os.Getenv("WORQHAT_ENVIRONMENT")
+      if env == "" {
+        env = "production"
+      }
       response, err := client.DB.SemanticSearch(context.TODO(), worqhat.DBSemanticSearchParams{
         Query: "Find products related to machine learning",
         Table: "products",
         Limit: 10,
         Threshold: 0.7,
-        Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+        Environment: env, // Defaults to production
       })
       
       // Handle errors
@@ -252,12 +256,16 @@ This example shows how to search across multiple tables simultaneously.
       
       // Search across multiple tables
       tables := []string{"products", "articles", "documents"}
+      env := os.Getenv("WORQHAT_ENVIRONMENT")
+      if env == "" {
+        env = "production"
+      }
       response, err := client.DB.SemanticSearch(context.TODO(), worqhat.DBSemanticSearchParams{
         Query: "artificial intelligence and automation",
         Tables: tables,
         Limit: 15,
         Threshold: 0.6,
-        Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+        Environment: env, // Defaults to production
       })
       
       // Handle errors
@@ -403,7 +411,7 @@ This example shows how to combine semantic search with additional filters.
         Limit: 10,
         Threshold: 0.7,
         Filters: filters,
-        Environment: os.Getenv("WORQHAT_ENVIRONMENT", "production"), // Defaults to production
+        Environment: env, // Defaults to production
       })
       
       // Handle errors
